@@ -20,6 +20,7 @@ import java.util.Collection;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Semaphore;
+import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.locks.Lock;
@@ -88,7 +89,11 @@ public class PartialReachedSetPartitioningParallelStrategy extends AbstractStrat
     Precision initPrec = pReachedSet.getPrecision(initialState);
 
     logger.log(Level.INFO, "Create and start threads");
-    ExecutorService executor = Executors.newFixedThreadPool(numThreads);
+    ThreadFactory threadFactory =
+        Thread.ofPlatform()
+            .name("PartialReachedSetPartitioningParallelStrategy.checkCertificate-", 0)
+            .factory();
+    ExecutorService executor = Executors.newFixedThreadPool(numThreads, threadFactory);
     try {
       for (int i = 0; i < numThreads; i++) {
         executor.execute(
